[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Images/laserRed.png" type="Texture2D" id=1]
[ext_resource path="res://Weapons/Laser.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 4.5 )

[node name="Laser" type="Area2D"]
collision_layer = 4
collision_mask = 22
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="BulletSprite" type="Sprite2D" parent="."]
scale = Vector2( 0.75, 0.25 )
texture = ExtResource( 1 )

[node name="Lifetime" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
